# Sudokumm

./: .cproject  Doxyfile  INSTALL  README  TODO  autogen.sh  configure.ac
.svn/: entries
.svn/text-base/: .project.svn-base  clean.sh.svn-base  configure.ac.svn-base
Debug/: gtkmmlearn  makefile
Debug/src/: MainWindow.d  MyButton.d  OverNotify.d  PixButton.d  SudokuSquare.d  helloworld.d  main.d  subdir.mk
src/: .SudokuSquare.cc.swp  AboutBox.cc  AboutBox.h  MainWindow.cc  MainWindow.h  Makefile  Makefile.am  SquareContainer.cc  SquareContainer.h  SudokuSquare.cc  SudokuSquare.h  logo.cc  main.cpp  sudokumm
src/.deps/: MainWindow.Po  SudokuSquare.Po  main.Po
src/.svn/: entries
src/.svn/text-base/: MainWindow.cc.svn-base  MainWindow.h.svn-base  Makefile.am.svn-base  SudokuSquare.cc.svn-base  SudokuSquare.h.svn-base  gtkmmlearn.svn-base  main.cpp.svn-base
src/libsudoku/: Board.hpp  Cluster.hpp  Game.hpp  Square.hpp  SquareState.hpp  Sudoku.hpp  tools.hpp
